ncp-features-example/2.3.2-allow-http/nginx-web-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-allow-http
  namespace: ncp-feature
  labels:
    feature: allow-http 
spec:
  replicas: 3
  selector:
    matchLabels:
      feature: allow-http       
  template:
    metadata:
      labels:
        feature: allow-http 
    spec:
      containers:
      - name: nginx-allow-http 
        image: nginx
        ports:
        - containerPort: 80
