ncp-features-example/2.3.2-allow-http/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-allow-http
  namespace: ncp-feature
  labels:
    feature: allow-http 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: allow-http
