ncp-features-example/2.3.2-allow-http/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-allow-http
  namespace: ncp-feature
  labels:
    feature: allow-http   
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - tls-ingress.ytsuboi.local
    secretName: tls-ingress
  rules:
  - host: tls-ingress.ytsuboi.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-allow-http
          servicePort: 80
